used java Base64 convertor for encoding the fingerprint